--- a/data/view/web/set/theme.html
+++ b/data/view/web/set/theme.html
@@ -73,7 +73,7 @@
         {{ formModal() }}
     {% endcall %}
     {% call delModal() %}
-        <p>该展厅的所有相关配置都将删除！</p>
+        <p>该主题的所有相关配置都将删除！</p>
         <form role="form" action="#" enctype="multipart/form-data" method="post" style="display:none">
             <input type="hidden" name="id" value=""/>
         </form>
