--- a/data/view/web/dev/groups.html
+++ b/data/view/web/dev/groups.html
@@ -77,21 +77,22 @@
             <input type="hidden" name="exhibit" value=""/>
             <div class="card-body">
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">序号：</label>
+                    <label class="col-sm-3 col-form-label">序号*：</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="number">
+                        <input type="text" class="form-control" placeholder="APP上按钮位置，示例1" value="" name="number">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">组名称：</label>
+                    <label class="col-sm-3 col-form-label">组名称*：</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="name">
+                        <input type="text" class="form-control" placeholder="APP按钮名字" value="" name="name">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">组标识：</label>
+                    <label class="col-sm-3 col-form-label">组标识*：</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="tag">
+                        <input type="text" class="form-control" placeholder="box|pc|red|com，示例：box1" value=""
+                               name="tag">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -117,7 +118,7 @@
                         <label for="{{ prefix }}displayRadio2">是&nbsp;&nbsp;&nbsp;&nbsp;</label>
                     </div>
                 </div>
-                 <div class="form-group row">
+                <div class="form-group row">
                     <label class="col-sm-3 col-form-label">样式：</label>
                     <div class="col-sm-9">
                         <input type="text" class="form-control" placeholder="请输入" value="" name="style">
@@ -152,7 +153,7 @@
         {{ formModal("update_") }}
     {% endcall %}
     {% call delModal() %}
-        <p>该展厅的所有相关配置都将删除！</p>
+        <p>该组的所有相关配置都将删除！</p>
         <form role="form" action="#" enctype="multipart/form-data" method="post" style="display:none">
             <input type="hidden" name="id" value=""/>
             <input type="hidden" name="exhibit" value=""/>
@@ -184,7 +185,12 @@
             {name: "tag", type: "number", width: 50, align: "center", title: "组标识"},
             {name: "delay_start", type: "number", width: 50, align: "center", title: "开延迟", visible: false},
             {name: "delay_end", type: "number", width: 50, align: "center", title: "关延迟", visible: false},
-            {name: "display", type: "text", width: 80, align: "center", title: "隐藏0/显示1"},
+            {
+                name: "display", type: "text", width: 80, align: "center", title: "显示",
+                itemTemplate: function (value, item) {
+                    return value == 0 ? "否" : "是"
+                }
+            },
             {name: "style", type: "text", width: 50, align: "center", title: "样式", visible: false},
             {name: "offset_x", type: "number", width: 50, align: "center", title: "偏移X", visible: false},
             {name: "offset_y", type: "number", width: 50, align: "center", title: "偏移Y", visible: false},
