--- a/data/view/web/dev/lamp.html
+++ b/data/view/web/dev/lamp.html
@@ -77,27 +77,27 @@
             <input type="hidden" name="exhibit" value=""/>
             <div class="card-body">
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">序号：</label>
+                    <label class="col-sm-3 col-form-label">序号*：</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="number">
+                        <input type="text" class="form-control" placeholder="APP上按钮位置，示例1" value="" name="number">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">接口：</label>
+                    <label class="col-sm-3 col-form-label">名称*：</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="port">
+                        <input type="text" class="form-control" placeholder="APP按钮名字" value="" name="name">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">名称：</label>
+                    <label class="col-sm-3 col-form-label">标识*：</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="name">
+                        <input type="text" class="form-control" placeholder="两位数值，示例：01" value="" name="tag">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">标识：</label>
+                    <label class="col-sm-3 col-form-label">接口*：</label>
                     <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="请输入" value="" name="tag">
+                        <input type="text" class="form-control" placeholder="1到8间数值" value="" name="port">
                     </div>
                 </div>
                 <div class="form-group clearfix">
@@ -175,7 +175,7 @@
         {{ formModal("update_") }}
     {% endcall %}
     {% call delModal() %}
-        <p>该展厅的所有相关配置都将删除！</p>
+        <p>该灯光的所有相关配置都将删除！</p>
         <form role="form" action="#" enctype="multipart/form-data" method="post" style="display:none">
             <input type="hidden" name="id" value=""/>
             <input type="hidden" name="exhibit" value=""/>
@@ -203,10 +203,25 @@
             {name: "id", type: "number", width: 30, align: "left", title: "ID", visible: false},
             {name: "exhibit", type: "number", width: 30, align: "left", title: "展厅", visible: false},
             {name: "number", type: "number", width: 50, align: "center", title: "序号"},
-            {name: "port", type: "number", width: 50, align: "center", title: "接口"},
-            {name: "name", type: "text", width: 160, align: "center", title: "名称"},
-            {name: "type", type: "text", width: 80, align: "center", title: "灯光0/设备1"},
-            {name: "display", type: "text", width: 80, align: "center", title: "隐藏0/显示1"},
+            {
+                name: "port", type: "text", width: 100, align: "center", title: "标识_接口",
+                itemTemplate: function (value, item) {
+                    return item.tag + "-" + value
+                }
+            },
+            {name: "name", type: "text", width: 100, align: "center", title: "名称"},
+            {
+                name: "type", type: "text", width: 80, align: "center", title: "类型",
+                itemTemplate: function (value, item) {
+                    return value == 0 ? "灯光" : "电"
+                }
+            },
+            {
+                name: "display", type: "text", width: 80, align: "center", title: "显示",
+                itemTemplate: function (value, item) {
+                    return value == 0 ? "否" : "是"
+                }
+            },
             {name: "tag", type: "text", width: 50, align: "center", title: "标识", visible: false},
             {name: "delay_start", type: "number", width: 50, align: "center", title: "开延迟", visible: false},
             {name: "delay_end", type: "number", width: 50, align: "center", title: "关延迟", visible: false},
