--- a/gui/UI/UI.ui
+++ b/gui/UI/UI.ui
@@ -22,7 +22,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>40</y>
+      <y>20</y>
       <width>251</width>
       <height>41</height>
      </rect>
@@ -30,11 +30,30 @@
     <property name="font">
      <font>
       <family>Alef</family>
-      <pointsize>28</pointsize>
+      <pointsize>22</pointsize>
      </font>
     </property>
     <property name="text">
      <string>服务启动成功！</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>60</y>
+      <width>161</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>黑体</family>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>端口：5000</string>
     </property>
    </widget>
   </widget>
