--- a/data/view/web/dev/infrared.html
+++ b/data/view/web/dev/infrared.html
@@ -187,6 +187,8 @@
             {name: "type", type: "text", width: 80, align: "center", title: "类型"},
             {name: "delay_start", type: "number", width: 50, align: "center", title: "开延迟", visible: false},
             {name: "delay_end", type: "number", width: 50, align: "center", title: "关延迟", visible: false},
+            {name: "num_start", type: "number", width: 50, align: "center", title: "开次数", visible: false},
+            {name: "num_end", type: "number", width: 50, align: "center", title: "关次数", visible: false},
             {name: "grouped", type: "number", width: 50, align: "center", title: "所属组", visible: false},
             {name: "params", type: "number", width: 50, align: "center", title: "定制参数", visible: false},
             {name: "style", type: "text", width: 50, align: "center", title: "样式", visible: false}
