--- a/data/view/web/content/index.html
+++ b/data/view/web/content/index.html
@@ -87,6 +87,7 @@
             <input type="hidden" name="id" value=""/>
             <input type="hidden" name="exhibit" value=""/>
             <div class="card-body">
+                <!-- 基本配置 -->
                 <div class="form-group row">
                     <label class="col-sm-3 col-form-label">序号*：</label>
                     <div class="col-sm-9">
@@ -123,6 +124,18 @@
                         <input type="text" class="form-control" placeholder="本地地址" value="" name="ip">
                     </div>
                 </div>
+                <div class="form-group clearfix">
+                    <label style="margin-right:55px">显示*：</label>
+                    <div class="icheck-primary d-inline">
+                        <input type="radio" id="{{ prefix }}displayRadio1" name="display" value=0>
+                        <label for="{{ prefix }}displayRadio1">否&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    </div>
+                    <div class="icheck-primary d-inline">
+                        <input type="radio" id="{{ prefix }}displayRadio2" name="display" value=1>
+                        <label for="{{ prefix }}displayRadio2">是&nbsp;&nbsp;&nbsp;&nbsp;</label>
+                    </div>
+                </div>
+                <!-- 客户端配置 -->
                 <div class="form-group row">
                     <label class="col-sm-3 col-form-label">默认内容：</label>
                     <div class="col-sm-9">
@@ -141,28 +154,18 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-3 col-form-label">封面模式：</label>
-                    <div class="col-sm-9">
-                        <input type="text" class="form-control" placeholder="播放模式" value="" name="cover_play">
-                    </div>
-                </div>
-                <div class="form-group clearfix">
-                    <label style="margin-right:55px">显示：</label>
-                    <div class="icheck-primary d-inline">
-                        <input type="radio" id="{{ prefix }}displayRadio1" name="display" value=0>
-                        <label for="{{ prefix }}displayRadio1">否&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                    </div>
-                    <div class="icheck-primary d-inline">
-                        <input type="radio" id="{{ prefix }}displayRadio2" name="display" value=1>
-                        <label for="{{ prefix }}displayRadio2">是&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                    </div>
-                </div>
-                <div class="form-group row">
                     <label class="col-sm-3 col-form-label">音量：</label>
                     <div class="col-sm-9">
                         <input type="text" class="form-control" placeholder="音量大小" value="" name="volume">
                     </div>
                 </div>
+                <div class="form-group row">
+                    <label class="col-sm-3 col-form-label">封面模式：</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" placeholder="播放模式" value="" name="cover_play">
+                    </div>
+                </div>
+                <!-- app配置 -->
                 <div class="form-group row">
                     <label class="col-sm-3 col-form-label">样式：</label>
                     <div class="col-sm-9">
